RESOLVED FIXED299448
Fix lifetime issues of objects related to DNS resolver
https://bugs.webkit.org/show_bug.cgi?id=299448
Summary Fix lifetime issues of objects related to DNS resolver
Per Arne Vollan
Reported 2025-09-24 09:28:51 PDT
Fix lifetime issues of objects related to DNS resolver.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-24 09:31:03 PDT
Per Arne Vollan
Comment 2 2025-09-24 09:34:09 PDT
EWS
Comment 3 2025-09-24 12:34:23 PDT
Committed 300476@main (f8f41229d5b3): <https://commits.webkit.org/300476@main> Reviewed commits have been landed. Closing PR #51262 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.