Fix lifetime issues of objects related to DNS resolver https://bugs.webkit.org/show_bug.cgi?id=299448 rdar://problem/161254921

Reviewed by Sihui Liu.

Store these objects in smart pointers in the TestController and NetworkProcess objects.

* Source/WebCore/PAL/pal/spi/cocoa/NetworkSPI.h:
* Source/WebKit/NetworkProcess/NetworkProcess.h:
* Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm:
(WebKit::NetworkProcess::platformInitializeNetworkProcessCocoa):
* Tools/WebKitTestRunner/TestController.h:
* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::cocoaDNSInitialize):

Canonical link: https://commits.webkit.org/300476@main