Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm
@@ -122,13 +122,16 @@ void NetworkProcess::platformInitializeNetworkProcessCocoa(const NetworkProcessC
 
 #if PLATFORM(IOS_SIMULATOR)
     // See TestController::cocoaPlatformInitialize for supporting a local DNS resolver on Mac.
-    if (parameters.localhostAliasesForTesting.contains("web-platform.test"_s)) {
-        nw_resolver_config_t resolverConfig = nw_resolver_config_create();
-        nw_resolver_config_set_protocol(resolverConfig, nw_resolver_protocol_dns53);
-        nw_resolver_config_set_class(resolverConfig, nw_resolver_class_designated_direct);
-        nw_resolver_config_add_name_server(resolverConfig, "127.0.0.1:8053");
-        nw_resolver_config_add_match_domain(resolverConfig, "test");
-        nw_privacy_context_require_encrypted_name_resolution(NW_DEFAULT_PRIVACY_CONTEXT, true, resolverConfig);
+    auto webPlatformTestDomain = "web-platform.test"_s;
+    if (parameters.localhostAliasesForTesting.contains(webPlatformTestDomain)) {
+        m_resolverConfig = adoptOSObject(nw_resolver_config_create());
+        if (auto resolverConfig = m_resolverConfig) {
+            nw_resolver_config_set_protocol(resolverConfig.get(), nw_resolver_protocol_dns53);
+            nw_resolver_config_set_class(resolverConfig.get(), nw_resolver_class_designated_direct);
+            nw_resolver_config_add_name_server(resolverConfig.get(), "127.0.0.1:8053");
+            nw_resolver_config_add_match_domain(resolverConfig.get(), webPlatformTestDomain.characters());
+            nw_privacy_context_require_encrypted_name_resolution(NW_DEFAULT_PRIVACY_CONTEXT, true, m_resolverConfig.get());
+        }
     }
 #endif
 
