Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm
@@ -60,7 +60,6 @@
 #import <WebKit/_WKApplicationManifest.h>
 #import <WebKit/_WKWebsiteDataStoreConfiguration.h>
 #import <pal/spi/cocoa/LaunchServicesSPI.h>
-#import <pal/spi/cocoa/NetworkSPI.h>
 #import <wtf/BlockPtr.h>
 #import <wtf/CompletionHandler.h>
 #import <wtf/MainThread.h>
@@ -394,29 +393,34 @@ void TestController::cocoaDNSInitialize()
     [agentUUID.get() getUUIDBytes:agentUUIDBytes];
     NSLog(@"useLocalDNSResolver: agent UUID: %@.", agentUUID.get());
 
-    static nw_resolver_config_t resolverConfig = nw_resolver_config_create();
-    nw_resolver_config_set_protocol(resolverConfig, nw_resolver_protocol_dns53);
-    nw_resolver_config_set_class(resolverConfig, nw_resolver_class_designated_direct);
-    nw_resolver_config_add_name_server(resolverConfig, "127.0.0.1:8053");
-    nw_resolver_config_add_match_domain(resolverConfig, "test");
-    nw_resolver_config_set_identifier(resolverConfig, agentUUIDBytes);
-    bool published = nw_resolver_config_publish(resolverConfig);
-    if (!published) {
-        NSLog(@"Failed to register DNS resolver agent UUID: %@. Using local DNS resolver failed.", agentUUID.get());
-        return;
+    m_resolverConfig = adoptOSObject(nw_resolver_config_create());
+    if (auto resolverConfig = m_resolverConfig) {
+        nw_resolver_config_set_protocol(resolverConfig.get(), nw_resolver_protocol_dns53);
+        nw_resolver_config_set_class(resolverConfig.get(), nw_resolver_class_designated_direct);
+        nw_resolver_config_add_name_server(resolverConfig.get(), "127.0.0.1:8053");
+        auto webPlatformTestDomain = "web-platform.test"_s;
+        nw_resolver_config_add_match_domain(resolverConfig.get(), webPlatformTestDomain);
+        nw_resolver_config_set_identifier(resolverConfig.get(), agentUUIDBytes);
+        bool published = nw_resolver_config_publish(resolverConfig.get());
+        if (!published) {
+            NSLog(@"Failed to register DNS resolver agent UUID: %@. Using local DNS resolver failed.", agentUUID.get());
+            RELEASE_ASSERT_NOT_REACHED();
+        }
     }
 
     // The following NetworkExtension policy is needed so we can run tests while a VPN is connected
-    RetainPtr policySession = adoptNS([[NEPolicySession alloc] init]);
-    RetainPtr domainPolicy = adoptNS([[NEPolicy alloc] initWithOrder:1 result:[NEPolicyResult netAgentUUID:agentUUID.get()] conditions:@[ [NEPolicyCondition domain:@"test"] ]]);
-    [policySession.get() addPolicy:domainPolicy.get()];
+    m_policySession = adoptNS([[NEPolicySession alloc] init]);
+    if (auto policySession = m_policySession) {
+        RetainPtr domainPolicy = adoptNS([[NEPolicy alloc] initWithOrder:1 result:[NEPolicyResult netAgentUUID:agentUUID.get()] conditions:@[ [NEPolicyCondition domain:@"test"] ]]);
+        [policySession addPolicy:domainPolicy.get()];
 
-    NSString *agentString = agentUUID.get().UUIDString;
-    RetainPtr agentPolicy = adoptNS([[NEPolicy alloc] initWithOrder:1 result:[NEPolicyResult netAgentUUID:agentUUID.get()] conditions:@[ [NEPolicyCondition domain:agentString] ]]);
-    [policySession.get() addPolicy:agentPolicy.get()];
+        NSString *agentString = agentUUID.get().UUIDString;
+        RetainPtr agentPolicy = adoptNS([[NEPolicy alloc] initWithOrder:1 result:[NEPolicyResult netAgentUUID:agentUUID.get()] conditions:@[ [NEPolicyCondition domain:agentString] ]]);
+        [policySession addPolicy:agentPolicy.get()];
 
-    policySession.get().priority = NEPolicySessionPriorityHigh;
-    [policySession.get() apply];
+        policySession.get().priority = NEPolicySessionPriorityHigh;
+        [policySession apply];
+    }
 }
 #endif
 
